@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 22-04-2006 changed: enable/disable subtitles now enable/disable caching of subtitles. also polished browsing a bit.
  - 21-04-2006 fixed: fixed the error in filezip properly.
  - 21-04-2006 fixed: xbmc would enable ac3 encoder if output was set to analog, but dash had ac3 enabled.
  - 21-04-2006 added: SMB ClientTimeOut to SMB Client GUI Settings
